refactor: remplacer les styles CSS en ligne par des classes dédiées pour une meilleure maintenabilité.

--- a/frontend/src/styles/pages/_create-server.scss
+++ b/frontend/src/styles/pages/_create-server.scss
@@ -155,4 +155,9 @@
     .hidden-input {
         display: none;
     }
+
+    .server-config-item--disabled {
+        opacity: 0.7;
+        cursor: not-allowed;
+    }
 }
