--- a/frontend/src/styles/_mixins.scss
+++ b/frontend/src/styles/_mixins.scss
@@ -1,5 +1,5 @@
 // ===========================
-// Kweebec Manager - Mixins
+// Draveur Manager - Mixins
 // ===========================
 
 // Flex utilities
