Refactorise la logique des détails du serveur en extrayant la gestion WebSocket dans un nouveau hook `useServerWebSocket` et ajoute de nouveaux composants d'interface utilisateur communs.

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -18,6 +18,7 @@
 @use 'components/installation-progress';
 @use 'components/tabs';
 @use 'components/server-list';
+@use 'components/server-metrics';
 
 
 // Pages
