feat: Implémente un système global de notifications toast et de dialogues modaux.

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -19,6 +19,7 @@
 @use 'components/tabs';
 @use 'components/server-list';
 @use 'components/server-metrics';
+@use 'components/feedback';
 
 
 // Pages
