--- a/frontend/src/styles/_base.scss
+++ b/frontend/src/styles/_base.scss
@@ -10,6 +10,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    outline: none !important;
 }
 
 html {
@@ -91,8 +92,7 @@ a {
 
 // Focus visible
 :focus-visible {
-    outline: 2px solid var(--color-accent);
-    outline-offset: 2px;
+    border-color: var(--color-accent);
 }
 
 // Code
