feat(chat): rename collaboration hub to team chat, add message deletion and modernize UI

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -20,7 +20,7 @@
 @use "components/server-list";
 @use "components/server-metrics";
 @use "components/feedback";
-@use "components/collaboration-hub";
+@use "components/team-chat";
 
 
 // Pages
