--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -21,6 +21,7 @@
 @use "components/server-metrics";
 @use "components/feedback";
 @use "components/team-chat";
+@use "components/tooltip";
 
 
 // Pages
