--- a/frontend/src/styles/components/_form.scss
+++ b/frontend/src/styles/components/_form.scss
@@ -1,3 +1,5 @@
+@use "../mixins" as *;
+
 // ===========================
 // Draveur Manager - Form Inputs
 // ===========================
@@ -150,19 +152,7 @@
         padding: 1rem 1.25rem;
         overflow-y: auto;
         flex: 1;
-
-        &::-webkit-scrollbar {
-            width: 5px;
-        }
-
-        &::-webkit-scrollbar-track {
-            background: transparent;
-        }
-
-        &::-webkit-scrollbar-thumb {
-            background: var(--color-border);
-            border-radius: 3px;
-        }
+        @include custom-scrollbar;
     }
 
     &__footer {
