--- a/frontend/src/styles/components/_select.scss
+++ b/frontend/src/styles/components/_select.scss
@@ -1,3 +1,5 @@
+@use "../mixins" as *;
+
 .custom-select {
     position: relative;
     width: 100%;
@@ -120,20 +122,7 @@
     }
 }
 
-/* Scrollbar styles */
-.custom-select__options::-webkit-scrollbar {
-    width: 6px;
-}
-
-.custom-select__options::-webkit-scrollbar-track {
-    background: transparent;
-}
-
-.custom-select__options::-webkit-scrollbar-thumb {
-    background-color: var(--color-border);
-    border-radius: 3px;
-
-    &:hover {
-        background-color: var(--color-text-muted);
-    }
+/* Scrollbar */
+.custom-select__options {
+    @include custom-scrollbar;
 }
