--- a/frontend/src/styles/components/_server-metrics.scss
+++ b/frontend/src/styles/components/_server-metrics.scss
@@ -1,5 +1,5 @@
-@use "../../styles/variables" as *;
-@use "../../styles/mixins" as *;
+@use "../variables" as *;
+@use "../mixins" as *;
 
 // Server Metrics Chart Component
 .server-metrics-chart {
